# bevy-hotedit

./: .gitignore  Cargo.toml  README.md
bevy_hotedit/: Cargo.toml
bevy_hotedit/macros/: Cargo.toml
bevy_hotedit/macros/src/: lib.rs
bevy_hotedit/src/: lib.rs
hotedit/: Cargo.toml
hotedit/src/: base.html  lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: main.rs
templates/: base.html.tera  macros.html.tera
tests/: Cargo.toml
tests/src/: hotedit-values.toml  main.rs
util/: Cargo.toml
util/src/: lib.rs
