[package]
name = "bevy_hotedit"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_hotedit_macros = { path = "../macros" }
bevy = "0.7"
toml = "0.5"
lazy_static = "1.4.0" # probably don't need this, look into removing later.

notify = "4.0.17"

axum = "0.5.8"
tokio = { version = "1.19.2", features = ["full"] }



